<resources>
    <string name="app_name">Calcul</string>
    <string name="result">0</string>
    <string name="c">C</string>
    <string name="para">(  )</string>
    <string name="pou">%</string>
    <string name="_7">7</string>
    <string name="div">/</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="mul">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="moi">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plu">+</string>
    <string name="pm">+/_</string>
    <string name="_0">0</string>
    <string name="vir">,</string>
    <string name="ega">=</string>
    <string name="calc">0</string>
    <string name="historique">Historique</string>
    <string name="todo">TODO</string>
    <string name="log">log</string>
    <string name="cos">cos</string>
    <string name="e">e</string>
    <string name="x">X²</string>
    <string name="ln">ln</string>
    <string name="xy">Xy</string>
    <string name="sin">sin</string>
    <string name="pi">π</string>
    <string name="tan">tan</string>
    <string name="rac">√</string>
    <string name="mod">mod</string>
    <string name="fact">x!</string>
    <string name="pgcd">pgcd</string>
    <string name="log2">log2</string>
    <string name="rad">rad</string>
    <string name="graphique">Graphique</string>
    <string name="camera">Camera</string>
    <string name="textGraph">Sin(x)</string>
    <string name="button_text">OCR</string>
    <string name="text_hint">Cacul reconnue</string>
</resources>
