<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textCalc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/calc"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="right|center_vertical"
        android:paddingRight="32dp"
        android:text="@string/result"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCalc">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/buttonHisto"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:onClick="btnHisto"
                android:text="@string/historique"
                android:textColor="@android:color/darker_gray" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageButton
                android:id="@+id/buttonDelete"
                style="@android:style/Widget.DeviceDefault.Light.ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="btnDelete"
                android:tint="@android:color/holo_blue_dark"
                app:srcCompat="@android:drawable/ic_input_delete" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="3dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="170dp">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonC"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="btnC"
                android:text="@string/c"
                android:textColor="@android:color/holo_red_dark" />

            <Button
                android:id="@+id/buttonPar"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="btnPar"
                android:text="@string/para"
                android:textColor="@android:color/holo_blue_dark" />

            <Button
                android:id="@+id/buttonPour"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="btnPour"
                android:text="@string/pou"
                android:textColor="@android:color/holo_blue_dark" />

            <Button
                android:id="@+id/buttonDiv"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="btnDiv"
                android:text="@string/div"
                android:textColor="@android:color/holo_blue_dark" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button7"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="btn7"
                android:text="@string/_7" />

            <Button
                android:id="@+id/button8"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="btn8"
                android:text="@string/_8" />

            <Button
                android:id="@+id/button9"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="btn9"
                android:text="@string/_9" />

            <Button
                android:id="@+id/buttonMul"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="btnMul"
                android:text="@string/mul"
                android:textColor="@android:color/holo_blue_dark" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button4"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="btn4"
                android:text="@string/_4" />

            <Button
                android:id="@+id/button5"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="btn5"
                android:text="@string/_5" />

            <Button
                android:id="@+id/button6"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="btn6"
                android:text="@string/_6" />

            <Button
                android:id="@+id/buttonMoins"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="btnMoins"
                android:text="@string/moi"
                android:textColor="@android:color/holo_blue_dark" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="btn1"
                android:text="@string/_1" />

            <Button
                android:id="@+id/button2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="btn2"
                android:text="@string/_2" />

            <Button
                android:id="@+id/button3"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="btn3"
                android:text="@string/_3" />

            <Button
                android:id="@+id/buttonPlus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="btnPlus"
                android:text="@string/plu"
                android:textColor="@android:color/holo_blue_dark" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonPlusMoins"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="btnPlusMoins"
                android:text="@string/pm" />

            <Button
                android:id="@+id/button0"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="btn0"
                android:text="@string/_0" />

            <Button
                android:id="@+id/buttonVir"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="btnVir"
                android:text="@string/vir" />

            <Button
                android:id="@+id/buttonEgal"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_blue_dark"
                android:onClick="btnEgal"
                android:text="@string/ega"
                android:textColor="@android:color/background_light" />
        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>